<!--
 ******************************************************************************
 *
 *  Copyright (c) 2021 phwang. All rights reserved.
 *
 ******************************************************************************
 -->

<resources>
    <string name="app_name">Go by Paul Hwang</string>

    <string name="about_title">About phwang</string>
    <string name="fabric_ip_address_title">Setup</string>
    <string name="go_game_title">Go Game</string>
    <string name="go_play_title">Go Play</string>
    <string name="go_title">Go</string>
    <string name="Login_title">Login</string>
    <string name="main_title">Play Go and Sudoku</string>
    <string name="Register_title">Register</string>
    <string name="setup_title">Setup</string>
    <string name="sudoku_config_title">Sudoku config</string>
    <string name="sudoku_title">Sudoku</string>

    <string name="new_game_title">Difficutly...</string>
    <string name="bind_service_title">Go</string>

    <string name="about_label">About</string>
    <string name="admin_label">Admin</string>
    <string name="black9_label">Black 9</string>
    <string name="black13_label">Black 13</string>
    <string name="black19_label">Black 19</string>
    <string name="confirm_label">Confirm</string>
    <string name="easy_label">Easy</string>
    <string name="email_label">Email</string>
    <string name="exit_label">Exit</string>
    <string name="get_groups_label">Group List</string>
    <string name="hard_label">Hard</string>
    <string name="join_label">Join</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="medium_label">Medium</string>
    <string name="password_label">Password</string>
    <string name="play_label">Play</string>
    <string name="play_go_label">Play Go</string>
    <string name="play_sudoku_label">Play Sudoku</string>
    <string name="register_label">Register</string>
    <string name="settings_label">Settings...</string>
    <string name="server_ip_address_label">Server IP Address</string>
    <string name="setup_label">Setup</string>
    <string name="solo_label">Solo</string>
    <string name="solo13_label">13 x 13</string>
    <string name="solo19_label">19 x 19</string>
    <string name="solo9_label">9 x 9</string>
    <string name="start_label">Start</string>
    <string name="test_label">Test</string>
    <string name="user_name_label">Username</string>
    <string name="watch_label">Watch</string>
    <string name="welcome_label">Welcome</string>
    <string name="white9_label">White 9</string>
    <string name="white13_label">White 13</string>
    <string name="white19_label">White 19</string>

    <string name="about_text">Go and Sudoku by Paul Hwang</string>

    <string name="settings_shortcut">s</string>

    <string-array name="go_board_size_array_label">
        <item>19x19</item>
        <item>13x13</item>
        <item>9x9</item>
    </string-array>

    <string-array name="go_stone_color_array_label">
        <item>Black</item>
        <item>White</item>
    </string-array>
</resources>