<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/go_config_solo9_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo9_label" />
        <Button
            android:id="@+id/go_config_solo13_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo13_label" />
        <Button
            android:id="@+id/go_config_solo19_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo19_label" />
    </LinearLayout>
    <Button
        android:id="@+id/go_config_play_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_label" />

    <Button
        android:id="@+id/go_config_exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label" />
</LinearLayout>
