<!--
 ******************************************************************************
 *
 *  Copyright (c) 2021 phwang. All rights reserved.
 *
 ******************************************************************************
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50px"
    android:padding="50px"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">
        <TextView
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:textSize="24sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/play_go_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_go_label" />
        <Button
            android:id="@+id/play_sudoku_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_sudoku_label" />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_label" />
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_label" />
        <Button
            android:id="@+id/setup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_label" />
        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_label" />
        <Button
            android:id="@+id/test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_label" />
        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_label" />
    </LinearLayout>
</LinearLayout>
