<?xml version="1.0" encoding="utf-8"?>

<!--
 ******************************************************************************
 *
 *  Copyright (c) 2021 phwang. All rights reserved.
 *
 ******************************************************************************
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/sign_in_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50px"
    android:padding="50px"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/welcome_label"
                android:textSize="30sp"
                android:textColor="@color/text_color"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_label"
                android:inputType="text"/>
            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/sign_in_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_label" />
            <Button
                android:id="@+id/sign_in_exit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_label" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
