<!--
 ******************************************************************************
 *
 *  Copyright (c) 2021 phwang. All rights reserved.
 *
 ******************************************************************************
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/sign_up_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50px"
    android:padding="50px"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">
        <TextView
            android:text="@string/fabric_ip_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <EditText
                android:id="@+id/fabric_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_ip_address_label"
                android:inputType="text"/>
            <Button
                android:id="@+id/fabric_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_label" />
            <Button
                android:id="@+id/fabric_exit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_label" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
